--- a/lookup/templates/about.html
+++ b/lookup/templates/about.html
@@ -4,7 +4,9 @@
 
 <h1>About Air Quality Prediction</h1>
 <p>
-Nothing here for now.
+This webpage tries to predict the Air Quality in Valencia for the next 4 days.
+The frontend website was built with Django. The backend side with Python using Prophet Forecast.
+And the project has been deployed in AWS (as a K8s cluster) with Jenkins and Docker.
 
 </p>
 {% endblock %}
